<resources>
    <string name="app_name">Calculator</string>
    <string name="baseResult">0</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="result">=</string>
    <string name="mult">X</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="slash">/</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="fife">5</string>
    <string name="four">4</string>
    <string name="clear">С</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
</resources>